# airsqlmodel

./: README.md  justfile  pyproject.toml
.github/workflows/: CI.yaml  release-to-pypi.yaml
src/air_sqlmodel/: __init__.py
src/airsqlmodel/: __init__.py  main.py
tests/: test_sql.py
