[project]
name = "AirSQLModel"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "air>=0.39.0",
    "greenlet>=3.2.4",
    "sqlmodel>=0.0.27",
]
urls.Homepage = "https://github.com/pydanny/airsqlmodel"

[project.optional-dependencies]
postgresql = [
    "greenlet>=3.2.4", # Dependency for SQLAlchemy to run async
    "asyncpg>=0.30.0",
    "psycopg-binary>=3.2.12",    
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "ipdb",
    "pytest>=8.4.2",    
    "ruff>=0.14.3",    
    "rust-just>=1.43.0",
    "pytest-asyncio>=1.1.0", # Adds asyncio support for pytest
]


[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"


[tool.pytest_env]
# Test value for the SUPER_SECRET_KEY environment variable
DATABASE_URL = "sqlite:///:memory:"
